fixed [gh-6] : added cdn links to bootstrap and jquery

--- a/templates/result.html
+++ b/templates/result.html
@@ -11,11 +11,15 @@
     <title>recipeasy | recipe finder</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{{ url_for('static', filename='bootstrap.css') }}" rel="stylesheet">
+    <!--<link href="{{ url_for('static', filename='bootstrap.css') }}" rel="stylesheet">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">-->
 
     <!-- JavaScript -->
-    <script src="{{ url_for('static', filename='jquery-1.10.2.js') }}"></script>
-    <script src="{{ url_for('static', filename='bootstrap.js') }}"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <!--<script src="{{ url_for('static', filename='jquery-1.10.2.js') }}"></script>-->
+    <!--<script src="{{ url_for('static', filename='bootstrap.js') }}"></script>-->
 
 </head>
 
